media/error_tc/error_254.txt
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_o2OjQdO.cpp: In function 'int main()':
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_o2OjQdO.cpp:8:1: error: expected ';' before '}' token
 }
 ^
